lavf/movenc: Fail when codec tag is invalid for format

Fixes ticket #6897

Signed-off-by: James Almer <jamrial@gmail.com>